--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 .DS_Store
+./frontEnd/.DS_Store
+./frontEnd/assets/.DS_Store
+./frontEnd/assets/img/.DS_Store
+./frontEnd/assets/img/lightcones/.DS_Store
+./frontEnd/assets/img/lightcones/4*/.DS_Store
